update monkdog in c post

--- a/_posts/2018-10-05-monkdog.md
+++ b/_posts/2018-10-05-monkdog.md
@@ -1,8 +1,10 @@
 ---
 title: "MonkDog in C"
 permalink: /monkdog-in-c
-project-date: "Sometime in 2006"
+project-date: "Sometime in 2006 or 2007"
 ---
+
+The year was 2006. Or was it 2007? I'm not sure. I was but a sophomore student in the leading university for taking up Computer Science in the Philippines. No idea about what I wanted to do in life, but I knew I wanted to learn how computers work.
 
 MonkDog is a turn-based game inspired by the classic Pokemon battle system.<!--more-->
 
