add meta tags, image, and description

--- a/_posts/2018-10-05-monkdog.md
+++ b/_posts/2018-10-05-monkdog.md
@@ -2,6 +2,8 @@
 title: "MonkDog in C"
 permalink: /monkdog-in-c
 project-date: "Sometime in 2006 or 2007"
+image: ayo.png
+description: "Ayo Ayco has contributed software development expertise to UPLB, DOST, Infor, and various government-funded projects such as University of the Philippines’ National Operational Assessment of Hazards and Ateneo’s Cloud-Based Intelligent Total Analysis System."
 ---
 
 The year was 2006. Or was it 2007? I'm not sure. I was but a sophomore student in the leading university for taking up Computer Science in the Philippines. No idea about what I wanted to do in life, but I knew I wanted to learn how computers work.
