--- a/_posts/2018-01-11-tobacco.md
+++ b/_posts/2018-01-11-tobacco.md
@@ -5,6 +5,6 @@ project-date: "2016"
 image: ayo.png
 description: "Ayo Ayco has contributed software development expertise to UPLB, DOST, Infor, and various government-funded projects such as University of the Philippines’ National Operational Assessment of Hazards and Ateneo’s Cloud-Based Intelligent Total Analysis System."
 ---
-Built with free and open source software InaSAFE at its core, WebSAFE is an impact assessment tool used in the Philippines to calculate the needs of a community considering the effects of a particular hazard. This feature is accessible in the Project NOAH web app.
+An online toolkit for Preventing Tobacco Industry Interference presenting a range of issues, policy options, and considerations that governments need to take into account when implementing Article 5.3 of the World Health Organization Framework Convention on Tobacco Control (WHO FCTC).
 
-Technologies: AngularJS, HTML, JavaScript, CSS, Python, PostgreSQL
+Technologies: Wordpress, PHP, HTML, JavaScript, CSS, MySQL
