update projects with disclaimer

--- a/_posts/2018-01-08-philgrss.md
+++ b/_posts/2018-01-08-philgrss.md
@@ -8,4 +8,6 @@ description: "Ayo Ayco has contributed software development expertise to UPLB, D
 
 This is a website for the Philippine Geosciences and Remote Sensing Society (PhilGRSS), a group of experts in the field of Remote Sensing whose objective is to promote and advance the application of Remote Sensing.
 
+*More details about this project will be added later.*
+
 Technologies: Wordpress, PHP, HTML, JavaScript, CSS, MySQL
