--- a/_posts/2018-01-09-noah.md
+++ b/_posts/2018-01-09-noah.md
@@ -8,4 +8,6 @@ description: "Ayo Ayco has contributed software development expertise to UPLB, D
 
 Built with various open source technologies such as Python, Open Layers 3, Tornado Web, we used AngularJS as the framework for the web application.
 
+*More details about this project will be added later.*
+
 Technologies: AngularJS, HTML, JavaScript, CSS, Python, PostgreSQL
