--- a/_posts/2018-01-10-websave.md
+++ b/_posts/2018-01-10-websave.md
@@ -8,4 +8,6 @@ description: "Ayo Ayco has contributed software development expertise to UPLB, D
 
 Built with free and open source software InaSAFE at its core, WebSAFE is an impact assessment tool used in the Philippines to calculate the needs of a community considering the effects of a particular hazard. This feature is accessible in the Project NOAH web app.
 
+*More details about this project will be added later.*
+
 Technologies: AngularJS, HTML, JavaScript, CSS, Python, PostgreSQL
