--- a/_posts/2018-01-11-tobacco.md
+++ b/_posts/2018-01-11-tobacco.md
@@ -7,4 +7,6 @@ description: "Ayo Ayco has contributed software development expertise to UPLB, D
 ---
 An online toolkit for Preventing Tobacco Industry Interference presenting a range of issues, policy options, and considerations that governments need to take into account when implementing Article 5.3 of the World Health Organization Framework Convention on Tobacco Control (WHO FCTC).
 
+*More details about this project will be added later.*
+
 Technologies: Wordpress, PHP, HTML, JavaScript, CSS, MySQL
