--- a/_posts/2018-01-13-citas.md
+++ b/_posts/2018-01-13-citas.md
@@ -7,4 +7,6 @@ description: "Ayo Ayco has contributed software development expertise to UPLB, D
 ---
 Web app for CITAS version 2 - a platform for remote data collection, data storage, and a data analysis framework for the detection and forecasting of plant diseases.
 
+*More details about this project will be added later.*
+
 Technologies: NodeJS, Angular, ExpressJS, Leaflet, Highcharts
