--- a/_posts/projects/2018-01-08-philgrss.md
+++ b/_posts/projects/2018-01-08-philgrss.md
@@ -1,13 +1,14 @@
 ---
-title: "WebSAFE"
-permalink: /websage
+title: "PhilGRSS Website"
+permalink: /philgrss
 project-date: "2015"
+category: projects
 image: ayo.png
 description: "Ayo Ayco has contributed software development expertise to UPLB, DOST, Infor, and various government-funded projects such as University of the Philippines’ National Operational Assessment of Hazards and Ateneo’s Cloud-Based Intelligent Total Analysis System."
 ---
 
-Built with free and open source software InaSAFE at its core, WebSAFE is an impact assessment tool used in the Philippines to calculate the needs of a community considering the effects of a particular hazard. This feature is accessible in the Project NOAH web app.
+This is a website for the Philippine Geosciences and Remote Sensing Society (PhilGRSS), a group of experts in the field of Remote Sensing whose objective is to promote and advance the application of Remote Sensing.
 
 *More details about this project will be added later.*
 
-Technologies: AngularJS, HTML, JavaScript, CSS, Python, PostgreSQL
+Technologies: Wordpress, PHP, HTML, JavaScript, CSS, MySQL
