--- a/_posts/projects/2018-01-09-noah.md
+++ b/_posts/projects/2018-01-09-noah.md
@@ -1,12 +1,14 @@
 ---
-title: "Innovation Flight Central"
-permalink: /innovation-flight-central
-project-date: "2017"
+title: "Project NOAH 2.0"
+permalink: /noah
+project-date: "2015"
+category: projects
 image: ayo.png
 description: "Ayo Ayco has contributed software development expertise to UPLB, DOST, Infor, and various government-funded projects such as University of the Philippines’ National Operational Assessment of Hazards and Ateneo’s Cloud-Based Intelligent Total Analysis System."
 ---
-Hosted in Infor’s private intranet, this is a submission platform where employees can share ideas or kick-start projects.
+
+Built with various open source technologies such as Python, Open Layers 3, Tornado Web, we used AngularJS as the framework for the web application.
 
 *More details about this project will be added later.*
 
-Technologies: PHP, MySQL, MiniOrange SAML Login, Windows Server (IIS), Windows ADFS
+Technologies: AngularJS, HTML, JavaScript, CSS, Python, PostgreSQL
