--- a/_posts/projects/2018-01-10-websave.md
+++ b/_posts/projects/2018-01-10-websave.md
@@ -1,12 +1,13 @@
 ---
-title: "Project NOAH 2.0"
-permalink: /noah
+title: "WebSAFE"
+permalink: /websage
 project-date: "2015"
+category: projects
 image: ayo.png
 description: "Ayo Ayco has contributed software development expertise to UPLB, DOST, Infor, and various government-funded projects such as University of the Philippines’ National Operational Assessment of Hazards and Ateneo’s Cloud-Based Intelligent Total Analysis System."
 ---
 
-Built with various open source technologies such as Python, Open Layers 3, Tornado Web, we used AngularJS as the framework for the web application.
+Built with free and open source software InaSAFE at its core, WebSAFE is an impact assessment tool used in the Philippines to calculate the needs of a community considering the effects of a particular hazard. This feature is accessible in the Project NOAH web app.
 
 *More details about this project will be added later.*
 
