--- a/_posts/projects/2018-01-11-tobacco.md
+++ b/_posts/projects/2018-01-11-tobacco.md
@@ -1,12 +1,12 @@
 ---
-title: "PhilGRSS Website"
-permalink: /philgrss
-project-date: "2015"
+title: "Anti-Tobacco Industry Interference"
+permalink: /anti-tobacco
+project-date: "2016"
+category: projects
 image: ayo.png
 description: "Ayo Ayco has contributed software development expertise to UPLB, DOST, Infor, and various government-funded projects such as University of the Philippines’ National Operational Assessment of Hazards and Ateneo’s Cloud-Based Intelligent Total Analysis System."
 ---
-
-This is a website for the Philippine Geosciences and Remote Sensing Society (PhilGRSS), a group of experts in the field of Remote Sensing whose objective is to promote and advance the application of Remote Sensing.
+An online toolkit for Preventing Tobacco Industry Interference presenting a range of issues, policy options, and considerations that governments need to take into account when implementing Article 5.3 of the World Health Organization Framework Convention on Tobacco Control (WHO FCTC).
 
 *More details about this project will be added later.*
 
