--- a/_posts/projects/2018-01-13-citas.md
+++ b/_posts/projects/2018-01-13-citas.md
@@ -2,6 +2,7 @@
 title: "Cloud-Based Intelligent Total Analysis System 2.0"
 permalink: /citasv2
 project-date: "2017"
+category: projects
 image: ayo.png
 description: "Ayo Ayco has contributed software development expertise to UPLB, DOST, Infor, and various government-funded projects such as University of the Philippines’ National Operational Assessment of Hazards and Ateneo’s Cloud-Based Intelligent Total Analysis System."
 ---
