update citas project permalink

--- a/_posts/projects/2018-01-13-citas.md
+++ b/_posts/projects/2018-01-13-citas.md
@@ -1,6 +1,6 @@
 ---
 title: "Cloud-Based Intelligent Total Analysis System 2.0"
-permalink: /citasv2
+permalink: /citas
 project-date: "2017"
 category: projects
 image: ayo.png
