add about content to home page

--- a/_posts/talks/2015-09-17-foss4g.md
+++ b/_posts/talks/2015-09-17-foss4g.md
@@ -2,6 +2,7 @@
 title: FOSS4G Seoul 2015
 category: talks
 ---
+<!--more-->
 ## Free and Open Source Software for Geospatial 2015
 
 Session: Web and Framework
