--- a/_posts/talks/2015-11-14-devcon.md
+++ b/_posts/talks/2015-11-14-devcon.md
@@ -2,7 +2,7 @@
 title: DevCon Summit 2015
 category: talks
 ---
-
+<!--more-->
 Session: Web Development Special Track
 
 Venue: SMX Convention Center
