Add link to video

--- a/_posts/talks/2015-09-17-foss4g.md
+++ b/_posts/talks/2015-09-17-foss4g.md
@@ -6,5 +6,5 @@ category: talks
 ## Free and Open Source Software for Geospatial 2015
 
 Session: Web and Framework
-
+Video: [WebSAFE: Developing an Online Exposure and Risk Assessment Tool for the Philippines](https://vimeo.com/142336887)
 Venue: The K Seoul Hotel, Seoul, Korea
