add mnswpr project

--- a/src/_posts/projects/2018-01-08-philgrss.md
+++ b/src/_posts/projects/2018-01-08-philgrss.md
@@ -4,6 +4,7 @@ project-date: "2015"
 category: projects
 image: ayo.png
 description: "Ayo Ayco has contributed software development expertise to UPLB, DOST, Infor, and various government-funded projects such as University of the Philippines’ National Operational Assessment of Hazards and Ateneo’s Cloud-Based Intelligent Total Analysis System."
+published: false
 ---
 
 This is a website for the Philippine Geosciences and Remote Sensing Society (PhilGRSS), a group of experts in the field of Remote Sensing whose objective is to promote and advance the application of Remote Sensing.
