update project title

--- a/src/_posts/projects/2018-01-13-citas.md
+++ b/src/_posts/projects/2018-01-13-citas.md
@@ -1,11 +1,11 @@
 ---
-title: "Cloud-Based Intelligent Total Analysis System 2.0"
+title: "CITAS 2.0"
 project-date: "2017"
 category: projects
 image: ayo.png
 description: "Ayo Ayco has contributed software development expertise to UPLB, DOST, Infor, and various government-funded projects such as University of the Philippines’ National Operational Assessment of Hazards and Ateneo’s Cloud-Based Intelligent Total Analysis System."
 ---
-Web app for CITAS version 2 - a platform for remote data collection, data storage, and a data analysis framework for the detection and forecasting of plant diseases.
+Web app for Cloud-Based Intelligent Total Analysis System 2.0 - a platform for remote data collection, data storage, and a data analysis framework for the detection and forecasting of plant diseases.
 
 *More details about this project will be added later.*
 
